# based

./: Cargo.toml  README.md  shell.nix
real_shit/: basic.html  default.css
src/: lib.rs  main.rs
src/context/: mod.rs
src/dom/: mod.rs
src/layout/: mod.rs  mod.rs~  text.rs  text.rs~
src/layout/text/: font_data.rs  mod.rs
src/parser/: css.rs  html.rs  mod.rs
src/parser/css/: cascader.rs  mod.rs  mod.rs~  properties.rs
src/renderer/: mod.rs
src/shmontshmend/: mod.rs
src/util/: mod.rs
tests/: basic.html
